Updated version table location

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -407,7 +407,7 @@
     \subsubsection{Environment setup}
 
 
-    \begin{table}
+    \begin{table}[!h]
       \centering
       \begin{tabular}{| c | c |}
         \hline
