Updated main objectives

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -323,7 +323,7 @@
 
   \subsection{Main Objectives}
 
-    For this study several objectives have been proposed:
+    The main objective of this study is to test the scalability and integration of the proposed technologies, Spark, SystemML and Jupyter Notebook in the usecase of Stack Exchange communities, so further data analysis can be performed. This main goal is divided in three major goals:
 
     \begin{itemize}
 
@@ -331,9 +331,11 @@
 
       \item Verify SystemML integration with Spark for further research and scalability.
 
-      \item Use SystemML survival analysis algorithms to analyze Stackexchange's data and obtain conclusions on the main variables affecting the time taken by the community to answer a question.
+      \item Use SystemML survival analysis algorithms to analyze Stackexchange's data and obtain conclusions on the main variables affecting the time taken by the community to answer each question.
 
     \end{itemize}
+
+\newpage
 
 \section{Technologies}
   \label{sec:technologies}
