Updated survival analysis

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -406,7 +406,9 @@
   \subsection{Apache SystemML}
 
     Developed by IBM, Apache SystemML is the [precursor] of Spark ML (MLLib), the machine learning libraries of Spark.
-    SystemML is coded in a self-made programming language, Distributed Machine Learning (DML) and it can be used from Spark or Hadoop in a [submit-like execution or in a interactive execution, the one it has been used in this study]
+    SystemML is coded in a self-made programming language, Distributed Machine Learning (DML) and it can be used from Spark or Hadoop in a [submit-like execution or in a interactive execution, the one it has been used in this study].
+
+    SystemML has a high level API which can be addressed from Python-like or R-like sintaxis, and then transformed to the low level DML (Distributed Machine Learning) language.
 
     \subsubsection{SystemML Structure}
 
@@ -420,6 +422,7 @@
 
     \subsubsection{Environment setup}
 
+      The versions of the software used for this study are listed below:
 
     \begin{table}[!h]
       \centering
@@ -468,8 +471,6 @@
 
     For the python kernel, the SystemML library has to be installed, instructions for the installation can be found in the Apache SystemML's get started documentation: https://systemml.apache.org/install-systemml.html
 
-    The scala Toree kernel was used just for the preprocessing of the data, so the SystemML installation didn't have to be installed for this kernel.
-
 
 \section{Infrastructure and resources}
   \label{sec:infrastructure_and_resources}
@@ -478,9 +479,11 @@
 
   \subsection{Architecture scheme}
 
-    The whole study has been executed in a standalone model, with a MacBookPro Retina 2015.
+    The whole study has been executed in a standalone model, with a MacBookPro Retina 2015. The data was stored in an HDFS
 
   \subsection{Configuration}
+
+
 
   \subsection{Workflow}
 
@@ -490,12 +493,24 @@
     The data provided by StackOverflow comes in a reasonably clean xml set of files, which were previously described, on section \ref{subsec:data_structure}.
 
 
+
+
 \section{Results}
   \label{sec:results}
 
   \subsection{Used data}
 
+  \subsection{Survival Analysis}
+
+    Survival analysis is a set of different techniques and algorithms used to estimate the time passed until the occurrence of an event. All of these methods are based on the conditional probability of an event occurring in a certain period of time, usually called \emph{Hazard Rate}. This basic idea can be applied to numerous environments, such as time of failure of a component in the industry, time of occurrence of an event in economics, and others, but the main field of application of these methodologies is the medical, where the time until some event is usually important.
+
+    As in every statistic methodology, there are dependent and independent variables, usually called covariates. In this case, the dependent variable is, as mentioned before, the hazard rate, the conditional probability of an event occurring in a certain period of time, but the analysis is not only restricted to assess the effect of the covariates in the time to an event, but also the impact of these variables on the hazard rate.
+
+    Regarding the covariates there are different classifications, apart from the classical 
+
   \subsection{Kaplan-Meier model}
+
+
 
   \subsection{Cox Proportional Hazards Model}
 
