Added images path

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -16,6 +16,7 @@
 %   read geometry.pdf for detailed page layout information
 
 \usepackage{graphicx}
+\graphicspath{{images}}
 \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
 
 %%% PACKAGES
@@ -506,7 +507,7 @@
 
     As in every statistic methodology, there are dependent and independent variables, usually called covariates. In this case, the dependent variable is, as mentioned before, the hazard rate, the conditional probability of an event occurring in a certain period of time, but the analysis is not only restricted to assess the effect of the covariates in the time to an event, but also the impact of these variables on the hazard rate.
 
-    Regarding the covariates there are different classifications, apart from the classical 
+    Regarding the covariates there are different classifications, apart from the classical
 
   \subsection{Kaplan-Meier model}
 
