--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -16,7 +16,7 @@
 %   read geometry.pdf for detailed page layout information
 
 \usepackage{graphicx}
-\graphicspath{{images}}
+\graphicspath{{./images/}}
 \usepackage[parfill]{parskip} % Activate to begin paragraphs with an empty line rather than an indent
 
 %%% PACKAGES
@@ -518,6 +518,12 @@
     \subsubsection{Data censoring and truncation}
 
       Data censoring refers to a situation where some data of the instance is known but some event times are not known, for example when the event occurs after the end of the observation period. Data truncation refers to the lack of information of some variables outside of the time period considered in the study.
+
+      \begin{figure}
+        \includegraphics[width=\textwidth]{Data_censoring.png}
+        \caption{Censored and uncensored data}
+        \label{img:data_censoring}
+      \end{figure}
 
       There are different situations of data censoring,
 
