Added images folder and censoring image

--- a/paper/Survival_analysis_over_stackoverflow.tex
+++ b/paper/Survival_analysis_over_stackoverflow.tex
@@ -525,7 +525,9 @@
         \label{img:data_censoring}
       \end{figure}
 
-      There are different situations of data censoring,
+      There are different situations of data censoring, right, left and interval censoring. \emph{Right censoring} refers to the situation when the event doesn't occur during the observation period and occurs time after the end of the observation time interval. On the other hand, \emph{left censoring} occurs when the subjects of the study have already experienced the event when the study starts, but it is not clear exactly when. \emph{Interval censoring} refers to the case when the event has occurred during the interval but the information about the time it happened is not available.
+
+      Truncation 
 
     \subsubsection{Data structure}
 
